# lottery

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/checker/: check.rs  mod.rs  prize.rs
src/common/: consts.rs  mod.rs  url.rs
src/finder/: location.rs  lottery.rs  lottery_location.rs  mod.rs  parser.rs
tests/: sha2_utils.rs
