[package]
name = "lottery"
version = "0.3.5"
edition = "2021"
description = "A simple `Lotería de Navidad` finder and checker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
nom = "8.0.0"
reqwest = { version = "0.12.15", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
name = "lottery"
path = "src/lib.rs"

[[bin]]
name = "lottery"
path = "src/main.rs"
